{
    "name": "ScreenTouch",
    "maps": [
        {
            "name": "Player",
            "id": "e525d78e-4ff2-4ea7-bedf-7a651a0c9934",
            "actions": [
                {
                    "name": "PressScreen",
                    "type": "Button",
                    "id": "412516d9-7745-4b4f-8aff-adede5a2b4a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "46a7b5bf-1d5f-4979-8d7d-f556b55c0fed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "478d2895-7a2a-4486-8790-53378293040d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd73a24b-f0f1-4367-b352-f69bb5e1d27b",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79572fde-df0a-4be4-82b2-26a83bdaf7d9",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14c7dbbc-5150-4401-a635-11e0dda45af5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}